@@ -71,6 +71,7 @@ class SquirrelOption {
     var $raw_option_array;
     var $name;
     var $caption;
+    var $caption_wrap;
     var $type;
     var $refresh_level;
     var $size;
@@ -99,6 +100,7 @@ class SquirrelOption {
         $this->raw_option_array = $raw_option_array;
         $this->name = $name;
         $this->caption = $caption;
+        $this->caption_wrap = TRUE;
         $this->type = $type;
         $this->refresh_level = $refresh_level;
         $this->possible_values = $possible_values;
@@ -153,6 +155,11 @@ class SquirrelOption {
     /* Set the new value for this option. */
     function setNewValue($new_value) {
         $this->new_value = $new_value;
+    }
+
+    /* Set whether the caption is allowed to wrap for this option. */
+    function setCaptionWrap($caption_wrap) {
+        $this->caption_wrap = $caption_wrap;
     }
 
     /* Set the size for this option. */
@@ -925,6 +932,11 @@ function create_option_groups($optgrps, $optvals) {
                 (isset($optset['htmlencoded']) ? $optset['htmlencoded'] : false)
                 );
 
+            /* If provided, set if the caption is allowed to wrap for this option. */
+            if (isset($optset['caption_wrap'])) {
+                $next_option->setCaptionWrap($optset['caption_wrap']);
+            }
+
             /* If provided, set the size for this option. */
             if (isset($optset['size'])) {
                 $next_option->setSize($optset['size']);
@@ -1016,7 +1028,7 @@ function print_option_groups($option_groups) {
                                      . $option->caption . '</label>';
 
                 echo html_tag( 'tr', "\n".
-                           html_tag( 'td', $option->caption . (!empty($option->caption) ? ':' : ''), 'right' ,'', 'valign="middle"' ) .
+                           html_tag( 'td', $option->caption . (!empty($option->caption) ? ':' : ''), 'right' ,'', 'valign="middle"' . ($option->caption_wrap ? '' : ' style="white-space:nowrap"') ) .
                            html_tag( 'td', $option->createHTMLWidget(), 'left' )
                        ) ."\n";
             } else {
